chore: upgrade to JDK11